--- a/bayesian_network_CVD.ipynb
+++ b/bayesian_network_CVD.ipynb
@@ -371,21 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import KBinsDiscretizer\n",
     "colonne = ['Height_(cm)', 'Weight_(kg)', 'BMI']\n",
     "\n",
-    "# Inizializza il discretizzatore\n",
+    "# Initialize the discretizer\n",
     "discretizer = KBinsDiscretizer(n_bins=4, encode='ordinal', strategy='quantile')\n",
     "\n",
-    "# Applica la discretizzazione\n",
+    "# Apply the discretizer to the specified columns\n",
     "df_disc = df.copy()\n",
     "df_disc[colonne] = discretizer.fit_transform(df[colonne])\n",
-    "\n",
-    "\n",
     "\n",
     "# Discretize 'Alcohol_Consumption'\n",
     "df_disc['Alcohol_Consumption'] = pd.cut(\n",
@@ -405,13 +403,12 @@
     "# Discretize 'FriedPotato_Consumption'\n",
     "df_disc['FriedPotato_Consumption'] = pd.cut(\n",
     "    df['FriedPotato_Consumption'], bins=[-float('inf'), 10.0, float('inf')], labels=['Low', 'High']\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +474,7 @@
     }
    ],
    "source": [
-    "# Stampa la distribuzione delle colonne discretizzate\n",
+    "# Show the distribution of the discretized columns\n",
     "discretized_columns = ['Height_(cm)', 'Weight_(kg)', 'BMI', 'Alcohol_Consumption', 'Fruit_Consumption', 'Green_Vegetables_Consumption', 'FriedPotato_Consumption']\n",
     "\n",
     "for col in discretized_columns:\n",
@@ -488,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -550,11 +547,11 @@
     "\n",
     "\n",
     "pos = {\n",
-    "    # Colonna 1: Fattori di base\n",
+    "    # Column 1: Demographics\n",
     "    'Sex': (0, 3),\n",
     "    'Age_Category': (0, 2),\n",
     "\n",
-    "    # Colonna 2: Stile di vita e dieta\n",
+    "    # Column 2: Lifestyle\n",
     "    'Exercise': (2, 4),\n",
     "    'Smoking_History': (2, 3),\n",
     "    'Alcohol_Consumption': (2, 2),\n",
@@ -562,12 +559,12 @@
     "    'Green_Vegetables_Consumption': (2, 0),\n",
     "    'FriedPotato_Consumption': (2, -1),\n",
     "\n",
-    "    # Colonna 3: Misure fisiche\n",
+    "    # Column 3: Health Metrics\n",
     "    'Height_(cm)': (4, 2),\n",
     "    'Weight_(kg)': (4, 1),\n",
     "    'BMI': (4, 0),\n",
     "\n",
-    "    # Colonna 4: Condizioni mediche\n",
+    "    # Column 4: Health Conditions\n",
     "    'Heart_Disease': (7, 4),\n",
     "    'Cancer': (6, 3),\n",
     "    'Depression': (6, 2),\n",
@@ -575,7 +572,7 @@
     "    'Arthritis': (6, 0),\n",
     "}\n",
     "\n",
-    "# Disegno del grafo\n",
+    "# Create a directed graph from the Bayesian model\n",
     "plt.figure(figsize=(12, 12))\n",
     "G = nx.DiGraph(custom_model.edges())\n",
     "nx.draw(G, pos, with_labels=True, node_size=3500)\n",
@@ -587,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -623,6 +620,8 @@
     }
    ],
    "source": [
+    "# Tree Search Model\n",
+    "\n",
     "ts = TreeSearch(data=df_disc, root_node='Heart_Disease')\n",
     "# ts = TreeSearch(data=df_disc)\n",
     "tree_model = ts.estimate()\n",
@@ -635,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -657,6 +656,7 @@
     }
    ],
    "source": [
+    "# Hill Climb Search Model\n",
     "scorer = BDeuScore(data=df_disc)\n",
     "\n",
     "hc = HillClimbSearch(data=df_disc)\n",
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -739,6 +739,8 @@
     }
    ],
    "source": [
+    "# Compute CPDs for all models\n",
+    "\n",
     "models = [('custom', custom_model), ('tree', tree_model), ('hc', hc_model_bayes)]\n",
     "for name, model in models:\n",
     "    print(f'Computing CPDs for {name} model')\n",
@@ -865,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +901,7 @@
    ],
    "source": [
     "def new_func():\n",
-    "    # Definizione degli scenari da confrontare\n",
+    "    # Defines the scenarios to compare\n",
     "    scenarios_heart_disease = {\n",
     "        \"Healthy Lifestyle\": {\n",
     "            'Exercise': 'Yes',\n",
@@ -917,7 +919,7 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    # Eseguo le query per ciascun modello e raccolgo i risultati\n",
+    "    # Executes the queries and collects the results\n",
     "    data_heart_disease = []\n",
     "    for scenario_label, evidence in scenarios_heart_disease.items():\n",
     "        for model_label, model in models.items():\n",
@@ -934,13 +936,13 @@
     "                    'Probability': prob\n",
     "                })\n",
     "\n",
-    "    # Creo un DataFrame per la visualizzazione\n",
+    "    # Creates a DataFrame for visualization\n",
     "    df_heart_disease_plot = pd.DataFrame(data_heart_disease)\n",
     "\n",
-    "    # Filtra solo la probabilità di Heart_Disease = 'Yes'\n",
+    "    # Filters only the probability of Heart_Disease = 'Yes'\n",
     "    df_heart_disease_yes = df_heart_disease_plot[df_heart_disease_plot['Heart_Disease'] == 'Yes']\n",
     "\n",
-    "    # Tracciamento del grafico a barre raggruppate\n",
+    "    # Plots the grouped bar chart\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    sns.barplot(data=df_heart_disease_yes, x='Model', y='Probability', hue='Scenario', ci=None, palette=\"Set2\", dodge=True)\n",
     "    plt.title(\"Confronto: P(Heart_Disease = 'Yes' | Scenario)\")\n",
@@ -1126,45 +1128,6 @@
     "plt.ylim(0, 1)\n",
     "plt.ylabel(\"Probability of Diabetes\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ecco alcune query interessanti per un modello bayesiano che sfrutta le colonne del dataset:\n",
-    "\n",
-    "Influenza dell'esercizio e della storia del fumo sulla salute cardiaca:\n",
-    "\n",
-    "Qual è la probabilità di sviluppare malattie cardiache dato un alto livello di esercizio fisico e una storia negativa di fumo?\n",
-    "\n",
-    "Relazione tra dieta e rischio di diabete:\n",
-    "\n",
-    "In che modo il consumo di frutta, verdure (in particolare quelle verdi) e patate fritte influenza la probabilità di sviluppare il diabete?\n",
-    "\n",
-    "Interazione tra BMI, età e malattie croniche:\n",
-    "\n",
-    "Dato il BMI, l'altezza, il peso e la categoria d'età, qual è la probabilità condizionata di avere il diabete o altre malattie croniche come l'artrite?\n",
-    "\n",
-    "Effetto combinato degli stili di vita sul cancro:\n",
-    "\n",
-    "Qual è l'effetto combinato di fattori quali consumo di alcol, dieta (frutta, verdure e patate fritte) e attività fisica sulla probabilità di sviluppare il cancro?\n",
-    "\n",
-    "Relazione tra depressione e fattori demografici:\n",
-    "\n",
-    "Come influiscono sesso, categoria d'età e stile di vita (esercizio fisico, storia di fumo e consumo di alcol) sulla probabilità di sviluppare la depressione?\n",
-    "\n",
-    "Interazioni multiple per la salute complessiva:\n",
-    "\n",
-    "Qual è la probabilità che un individuo presenti più condizioni (ad esempio, malattie cardiache, diabete e artrite) in base a un insieme di fattori come BMI, dieta, attività fisica e storia di fumo?\n",
-    "\n",
-    "Confronto tra effetti diretti e indiretti:\n",
-    "\n",
-    "Quanto incide direttamente il consumo di alcol e indirettamente il livello di esercizio fisico sul rischio di cancro, controllando per variabili demografiche (sesso, età)?\n",
-    "\n",
-    "Relazione tra fattori fisici e comportamentali:\n",
-    "\n",
-    "In che modo le variabili misurate (altezza, peso, BMI) interagiscono con comportamenti (esercizio, dieta, fumo) per influenzare il rischio di malattie come il diabete e le malattie cardiache?"
    ]
   }
  ],
